--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,9 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:2.17"
     kapt "com.google.dagger:dagger-android-processor:2.17"
 
+    //paging and recycle view
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation "android.arch.paging:runtime:1.0.1"
 }
 
 kapt {
